fixed margins of body and changed grid-gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,7 @@ body {
     rgb(19, 170, 82) 0%,
     rgb(0, 102, 43) 90%
   );
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .header-container {
@@ -19,7 +18,7 @@ body {
   padding: 200px 0;
   margin: 0 auto;
   margin-top: 0;
-  max-width: 1200px;
+  max-width: 1400px;
 }
 .header-container h4 {
   font-size: 24px;
@@ -58,6 +57,7 @@ body {
   text-decoration: none;
   display: inline-block;
   margin-top: 32px;
+  max-width: 1400px;
 }
 
 footer {
@@ -105,7 +105,6 @@ footer p {
   font-size: 16px;
   line-height: 24px;
   opacity: 0.9;
-  margin-right: 20px;
 }
 section {
   max-width: 1200px;
@@ -114,6 +113,7 @@ section {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 @media (max-width: 960px) {
